<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="country"
            type="com.andraganoid.myworld.model.Country" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelCapitol"
                    style="@style/infoLabelStyle"
                    android:text="@string/capitol"
                    android:layout_weight="1" />

                <TextView
                    android:layout_weight="2"
                    android:id="@+id/generalCapitolTv"
                    style="@style/infoTextStyle"
                    android:text="@{country.capital}" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelRegion"
                    style="@style/infoLabelStyle"
                    android:text="@string/region"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/generalRegionTv"
                    android:layout_weight="2"
                    style="@style/infoTextStyle"
                    android:text="@{country.region}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelSubregion"
                    style="@style/infoLabelStyle"
                    android:text="@string/subregion"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/generalSubregionTv"
                    android:layout_weight="2"
                    style="@style/infoTextStyle"
                    android:text="@{country.subregion}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelArea"
                    style="@style/infoLabelStyle"
                    android:text="@string/area"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/generalAreaTv"
                    style="@style/infoTextStyle"
                    android:layout_weight="2"
                    number="@{country.area}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelPopulation"
                    style="@style/infoLabelStyle"
                    android:text="@string/population"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/generalPopulationTv"
                    style="@style/infoTextStyle"
                    android:layout_weight="2"
                    number="@{country.population}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelLat"
                    style="@style/infoLabelStyle"
                    android:text="@string/latitude"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/generalLatTv"
                    style="@style/infoTextStyle"
                    android:layout_weight="2"
                    getLatitude="@{country}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/labelLon"
                    style="@style/infoLabelStyle"
                    android:text="@string/longitude"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/generalLonTv"
                    style="@style/infoTextStyle"
                    android:layout_weight="2"
                    getLongitude="@{country}" />
            </LinearLayout>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</layout>