<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>

        <variable
            name="currencyItem"
            type="com.andraganoid.myworld.model.CurrenciesItem" />

        <variable
            name="divider"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelCurencyName"
                style="@style/infoLabelStyle"
                android:layout_weight="1"
                android:text="@string/currency_name" />

            <TextView
                android:layout_weight="2"
                android:id="@+id/curencyName"
                style="@style/infoTextStyle"
                android:text="@{currencyItem.name}" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelCurencyCode"
                android:layout_weight="1"
                style="@style/infoLabelStyle"
                android:text="@string/currency_code" />

            <TextView
                android:id="@+id/curencyCode"
                android:layout_weight="2"
                style="@style/infoTextStyle"
                android:text="@{currencyItem.code}" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelCurencySymbol"
                android:layout_weight="1"
                style="@style/infoLabelStyle"
                android:text="@string/currency_symbol" />

            <TextView
                android:id="@+id/curencySymbol"
                android:layout_weight="2"
                style="@style/infoTextStyle"
                android:textAlignment="viewStart"
                android:text="@{currencyItem.symbol}" />
        </LinearLayout>

        <View
            android:visibility="@{divider?View.VISIBLE:View.GONE}"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkBlue"
            android:layout_marginTop="8dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp" />

    </LinearLayout>

</layout>